k8s/kubejencdp-npm/kubejencdp-npm-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: __APP_NAME__-dc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: __APP_NAME__
        updateTimestamp: "__TIMESTAMP__"
    spec:
      containers:
      - name: __APP_NAME__-ctr
        image: >-
          __IMAGE__
        ports:
        - name: http-port
          containerPort: 8080
        imagePullPolicy: Always
